[tool.poetry]
name = "rasa-examples"
version = "0.1.0"
description = ""
authors = ["Linusp <linusp1024@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
rasa = "^3.2.4"
jieba = "^0.42.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
codespell = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
